--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                     </div>
                     
                     <div class="form-group">
-                        <button type="submit" class="btn-book">Book Now</button>
+                        <button type="button" id="proceedToPayment" class="btn-book">Proceed to Payment</button>
+                        <button type="submit" id="bookNow" class="btn-book" style="display:none;">Book Now</button>
                     </div>
                 </form>
             </div>
@@ -68,6 +69,16 @@
             </div>
         </main>
     </div>
+    <div id="paymentModal" class="modal" style="display:none;">
+        <div class="modal-content">
+            <span id="closeModal" class="close">&times;</span>
+            <h2>Scan to Pay</h2>
+            <div id="qrcode"></div>
+            <p>After payment, click the button below to confirm.</p>
+            <button id="confirmPayment" class="btn-book">I Have Paid</button>
+        </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
