Updated Admin Portal

--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
                     </div>
                     
                     <div class="form-group">
-                        <button type="submit" class="btn-book" id="bookButton">Book Now</button>
+                        <button type="submit" class="btn-book" id="bookButton">✅ Confirm Booking</button>
+                        <p class="booking-note">📝 Clicking this button will immediately confirm your booking and send you a confirmation email.</p>
                     </div>
                     
 
